# notepaper

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old  workspace.code-workspace
components/Config/: CMakeLists.txt
components/Config/include/: DEV_Config.h
components/Config/src/: DEV_Config.c
components/Display/: CMakeLists.txt
components/Display/include/: EPD_2in3_display.h  ImageData.h  epd_queue.h
components/Display/src/: EPD_2in13_display.c  ImageData.c
components/Examples/: CMakeLists.txt
components/Examples/include/: EPD_Test.h  ImageData.h
components/Examples/src/: EPD_2in13_test.c  ImageData.c
components/Fonts/: CMakeLists.txt
components/GUI/: CMakeLists.txt
components/GUI/include/: GUI_Paint.h
components/GUI/src/: GUI_Paint.c
components/NTP/: CMakeLists.txt  ntp.c  ntp.h  timestamp_format.c
components/coap_client/: CMakeLists.txt  coap_client.h  ntp.c  weather_3d.c  weather_now.c
components/coap_weather/: CMakeLists.txt  coap_weather.c  coap_weather.h
components/e-Paper/include/: EPD_2in13.h
components/mqtt_task/: CMakeLists.txt
components/mqtt_task/include/: mqtt_queue.h  mqtt_task.h
components/mqtt_task/src/: mqtt_task.c
components/tool/: CMakeLists.txt  tool.c  tool.h
components/weather/: CMakeLists.txt  weather.c  weather.h
main/: app_main.c
